fix draft post indicator width on mobile

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -9,7 +9,7 @@
   background-color: #f8f9fa; 
   margin-left: auto; 
   margin-right: auto; 
-  width: 44em;
+  max-width: 44em;
   font-weight: bold;
   text-align: center;
 }
